--- a/eCommerce/src/main/resources/static/web/assets/css/style.css
+++ b/eCommerce/src/main/resources/static/web/assets/css/style.css
@@ -368,7 +368,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 }
 
 .bg-theme-two {
-  background-color: #94c7eb;
+  background-color: #F8C7D8;
 }
 
 .bg-theme-two-light {
