--- a/eCommerce/src/main/resources/static/web/assets/css/style.css
+++ b/eCommerce/src/main/resources/static/web/assets/css/style.css
@@ -6633,3 +6633,7 @@ box-shadow: 2px 1px 40px -19px rgba(206,180,240,1);
   margin: 0 4px;
   font-size: 15px;
 }
+
+.videito {
+  margin-top: 1.4rem;
+}
